# bgrll

./: Streamer.sln  readme.md
NanaTest/: NanaTest.vcxproj
NanaTest/src/: main.cpp
bgrll/: CMakeLists.txt  bgrll.vcxproj  bgrll.vcxproj.filters
bgrll/assets/: hello_world.nc
bgrll/cmake/modules/: FindNana.cmake
bgrll/include/: DrawingUtil.hpp  GCode.hpp  IdleAnimation.hpp  MainWindow.hpp  PreviewWindow.hpp  SerialConn.hpp  Util.hpp
bgrll/src/: CMakeLists.txt  GCode.cpp  IdleAnimation.cpp  LinSconnImpl.cpp  MainWindow.cpp  PreviewWindow.cpp  SubSystemWindows.cpp  WinSconnImpl.cpp  main.cpp
